--- a/backend/core/templates/email_verify.html
+++ b/backend/core/templates/email_verify.html
@@ -18,11 +18,11 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="header">Welcome to ErrandHub!</h1>
+        <h1 class="header">Welcome to Taskoba !</h1>
         
         <p>Hello {{ user_full_name }},</p>
         
-        <p>Please verify your email address to activate your ErrandHub account:</p>
+        <p>Please verify your email address to activate your Taskoba account:</p>
         
         <div style="text-align: center;">
             <a href="{{ verification_url }}" class="button">
